fixed contact me form state being reset when wrapped with conditional wrapper by using grid for desktop view

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,9 @@
 .app{
-    display: flex;
-    flex-flow: row wrap;
-    width: 100%;
+    display: grid;
+    grid-template-columns: 33% 66%;
+    grid-template-rows: 33% 66%;
     height: 100vh;
+    width: 100%;
     overflow: auto;
     padding: 1rem;
     background-image: url(./assets/images/Frame1.svg);
@@ -11,34 +12,67 @@
     background-position: 50% 50%;
 }
 
-.me{
-    flex-basis: 33%;
+.aboutMeWrapper,
+.contactMeWrapper{
     display: flex;
-    flex-flow: row wrap;
+    grid-column: 1/2;
+    border-radius: var(--border-radius-card);
+    color: var(--color-neutral-100);
+    box-shadow: var(--elevation-1);
+}
+
+.aboutMeWrapper{
+    flex-flow: column;
+    justify-content: space-between;
+    /* flex-basis: 100%; */
+    box-shadow: var(--elevation-1);
+    padding: 1rem;
+    /* background-color: var(--color-primary-400); */
+    background-color: rgb(69, 89, 140, .95);
+    overflow: hidden;
+    margin-bottom: 2%;
+    margin-right: 1%;
+    grid-row: 1/2;
+}
+
+.contactMeWrapper{
+    overflow: hidden;
+    /* flex-basis: 100%; */
+    padding: 0 1rem;
+    /* background-color: var(--color-neutral-300); */
+    background-color: rgba(84, 93, 116, .95);
+    grid-row: 2/3;
+    margin-bottom: 1%;
 }
 
 .projects{
-    flex-basis: 66%;
+    /* flex-basis: 66%; */
     overflow: auto;
     display: flex;
     flex-flow: row wrap;
     margin-left: 1%;
+    grid-row: 1/3;
+    grid-column: 2/3;
+    height: 100%;
+    padding-bottom: 1%;
+    padding-left: 1%;
 }
 
 .projects article{
-    flex-basis: 49%;
+    flex-basis: 48%;
     margin-right: 2%;
-    height: 48%;
+    height: 49%;
 }
 
 @media (max-width: 1116px){
     .app{
         height: auto;
         min-height: 100vh;
+        display: flex;
+        flex-direction: column;
     }
 
     .projects{
-        flex-basis: 100%;
         margin: 1rem 0;
     }
 
@@ -47,6 +81,10 @@
         overflow: hidden;
         min-height: 400px;
         margin-bottom: 1rem;
+    }
+
+    .contactMeWrapper{
+        order: 2;
     }
 }
 
