--- a/src/components/AboutMe.module.css
+++ b/src/components/AboutMe.module.css
@@ -1,19 +1,3 @@
-.about{
-    flex-basis: 100%;
-    box-shadow: var(--elevation-1);
-    padding: 1rem;
-    border-radius: var(--border-radius-card);
-    /* background-color: var(--color-primary-400); */
-    background-color: rgb(69, 89, 140, .95);
-    color: white;
-    height: 34%;
-    overflow: hidden;
-    margin-bottom: 2%;
-    display: flex;
-    flex-flow: column;
-    justify-content: space-between;
-}
-
 .aboutMe p::after{
     content: " on the right";
 }
