--- a/src/components/ProjectCard.module.css
+++ b/src/components/ProjectCard.module.css
@@ -13,7 +13,7 @@
 }
 
 .projectCard:nth-child(even){
-    margin-right: 0;
+    margin-right: 1%;
 }
 
 .techStack{
